--- a/xor_gates_backprob.ipynb
+++ b/xor_gates_backprob.ipynb
@@ -20,7 +20,7 @@
    "outputs": [],
    "source": [
     "l = []\n",
-    "for x in itertools.product([1,0],repeat=10):\n",
+    "for x in itertools.product([1,0],repeat=4):\n",
     "    l.append(np.array(x))"
    ]
   },
@@ -309,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.0 (default, Nov  2 2021, 10:58:34) [Clang 13.0.0 (clang-1300.0.29.3)]"
   },
   "orig_nbformat": 4
  },
